add logout and about page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="password_isnt_equal">Password isn\'t same !</string>
     <string name="blood_type">Blood type</string>
 
+    <string name="copy_right">Copyrights © %1$d</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
